src/scss/_portfolio.scss
$portfolio-hero-height: 80vh; // This height allows that toolbar / navigation bar on iPhone 6s Portrait is shown
$portfolio-items-max-width: 1600px;
$portfolio-items-gutter-between: 4px;
$portfolio-items-image-aspect-ratio: 16 / 9;
$portfolio-items-image-aspect-ratio-sm-up: 4 / 3;
$portfolio-items-cols-sm: 2;
$portfolio-items-cols-md: 3;
$portfolio-items-cols-lg: 3;
$portfolio-items-cols-xl: 4;

.portfolio-heros {
  left: 0;
  position: fixed;
  right: 0;
  top: 0;

  & .carousel-item {
    height: $portfolio-hero-height;

    &:after {
      background: linear-gradient(to bottom, rgba($white, 0) 0%,rgba($black, 0.2) 50%,rgba($black, 0.4) 100%);
      // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#66000000',GradientType=0 );
      content: '';
      display: inline-block;
      height: 100%;
      left: 0;
      position: absolute;
      top: 0;
      width: 100%;
      pointer-events: none;
    }
    
    img {
      height: $portfolio-hero-height;
      object-fit: cover;
      width: 100%;
    }
  }

  & .carousel-caption {
    text-shadow: 0px 2px 0px rgba($body-color, 0.2);

    & .btn {
      text-shadow: none;
    }
  }
}

.portfolio-items {
  background-color: $body-bg;
  position: relative;

  @mixin portfolio-item-style($portfolio-items-cols) {
    border: $portfolio-items-gutter-between / 2 solid $body-bg;
    flex: 0 1 #{(100% / $portfolio-items-cols)};
  }

  &--after-heros {
    min-height: calc(#{$portfolio-hero-height} - #{$body-vertical-spacing});
    margin-top: calc(#{$portfolio-hero-height} - #{$body-vertical-spacing});

    // Dummy element to allow correct top margin for heading
    &::before {
      content: '';
      display: block;
      height: 0.01px;
    }
  }

  &__container {
    display: flex;
    flex-wrap: wrap;
    max-width: $portfolio-items-max-width;
    margin-left: -$portfolio-items-gutter-between / 2;
    margin-right: -$portfolio-items-gutter-between / 2;
    overflow-x: hidden;
    padding-top: $portfolio-items-gutter-between / 2;

    // Center horizontally when max-size is reached
    @media (min-width:$portfolio-items-max-width) {
      position: relative;
      left: 50%;
      transform: translateX(-50%);
    }
  }

  h1 {
    flex: 0 1 100%;
  }

  .card {
    border: none;
    flex: 0 1 100%;

    @include media-breakpoint-only(sm) {
      @include portfolio-item-style($portfolio-items-cols-sm)
    }
    
    @include media-breakpoint-only(md) {
      @include portfolio-item-style($portfolio-items-cols-md)
    }

    @include media-breakpoint-up(lg) {
      @include portfolio-item-style($portfolio-items-cols-lg)
    }

    @include media-breakpoint-up(xl) {
      @include portfolio-item-style($portfolio-items-cols-xl)
    }

    .card-img {
      overflow: hidden;

      & > a {
        display: block;
        transition: all 0.5s;

        &:hover {
          transform: scale(1.05);
        }
      }
      
    }

    .card-img-top {
      display: block;
      height: 0;
      overflow: hidden;
      position: relative;
      padding: #{1 / $portfolio-items-image-aspect-ratio * 100}% 0 0 0;
      width: 100%;

      @include media-breakpoint-up(sm) {
        padding: #{1 / $portfolio-items-image-aspect-ratio-sm-up * 100}% 0 0 0;
      }

      img {
        bottom: 0;
        display: block;
        height: 100%;
        left: 0;
        object-fit: cover;
        position: absolute;
        right: 0;
        top: 0;
        width: 100%;
      }
    }

    .card-text {
      display: none;
    }

    .card-title {
      font-size: $h6-font-size
    }

    &--hero {
      @include media-breakpoint-up(sm) {
        background-color: $jumbotron-bg;

        border-left: 0;
        border-right: 0;

        flex-direction: row;
        flex: 0 1 100%;

        &:nth-of-type(even) {
          flex-direction: row-reverse;
        }

        // Class needs to be added when hero count is even
        &--cnt-even {
          position: relative;
          left: $portfolio-items-gutter-between / 2;
        }

        // Class needs to be added when hero count is odd
        &--cnt-odd {
          position: relative;
          left: -$portfolio-items-gutter-between / 2;
        }

        & > * {
          flex: 0 1 50%;
        }

        & .card-title {
          font-size: $h3-font-size;

          @include media-breakpoint-up(md) {
            font-size: $h1-font-size;
          }
        }

        & .card-body {
          display: flex;
          flex-direction: column ;
          font-size: $lead-font-size;
          font-weight: $lead-font-weight;
          justify-content: center;
        }

        & .card-text {
          display: block;
        }
      }
    }
  }
}

